# dunendlar

./: CMakeLists.txt  GNuMIFlux.xml  README.md  dunendlar_g4.fcl  dunendlar_geo.C  genie_dunend.fcl  nd_hall_only_lar.gdml  nd_hall_with_lar_tms_nosand_norotation_changename.gdml  ndlar.fcl  prodgenie_nu_dunendlar.fcl  prodgenie_nu_dunendlartms.fcl  services_dunendlar.fcl  testgeo.fcl  webevdjob_dunendlar.fcl
dunendlar/: CMakeLists.txt
dunendlar/Analysis/: CMakeLists.txt  EdepDump_module.cc  SPDump_module.cc  SimDump_module.cc  edep_calc_utils.h  edep_hdf5_utils.h  edepdumpmodule.fcl  runedepdump.fcl  runedepdump_dunend2x2.fcl  runedepdump_nomerge.fcl  runsimdump.fcl  runsimdump_dunend2x2.fcl  runspdump.fcl  simdumpmodule.fcl  spdumpmodule.fcl
dunendlar/DUNENDLArObj/: CMakeLists.txt  Module0Trigger.h  Pixel.h  RawPixel.h  classes.h  classes_def.xml
dunendlar/Generator/: CMakeLists.txt  genie_dunend.fcl
dunendlar/Geometry/: CMakeLists.txt
dunendlar/Geometry/gdml/: 2x2_withRock.gdml  2x2_withoutRock.gdml  Module0.gdml  nd_hall_with_lar_tms_nosand_norotation_changename.gdml
dunendlar/Prototypes/: CMakeLists.txt
dunendlar/Prototypes/Module0/: CMakeLists.txt
dunendlar/Prototypes/Module0/ChannelMap/: CMakeLists.txt  NDLArModule0ChannelMapSP.cxx  NDLArModule0ChannelMapSP.h  NDLArModule0ChannelMapService.fcl  NDLArModule0ChannelMapService.h  NDLArModule0ChannelMapService_service.cc
dunendlar/Prototypes/Module0/ChannelMap/mapmakers/: geodeyaml.py  m0testmap.C
dunendlar/Prototypes/Module0/GalleryExamples/: m0g.C  m0goverlay.C
dunendlar/Prototypes/Module0/RawDecoding/: CMakeLists.txt  NDLArModule0RawInput.fcl  NDLArModule0RawInput.h  NDLArModule0RawInput_source.cc  testmodule0reader.fcl
dunendlar/Prototypes/Module0/Reco/: CMakeLists.txt  NDLArModule0SpacePointMaker.fcl  NDLArModule0SpacePointMaker_module.cc  testmodule0decodereco.fcl
fcl/: CMakeLists.txt
fcl/2x2/evd/: webevdjob_dunend2x2.fcl
fcl/2x2/g4/: CMakeLists.txt  dunend2x2_g4.fcl
fcl/common/: services_dunendlar.fcl
fcl/module0/: CMakeLists.txt
fcl/module0/ana/: runedepdump_dunendmodule0.fcl
fcl/module0/evd/: webevdjob_dunendmodule0.fcl
fcl/module0/g4/: dunendmodule0_g4.fcl
fcl/ndlartms/ana/: runedepdump_dunendlartms.fcl
fcl/ndlartms/g4/: dunendlartms_g4.fcl
temp/: dunendlartms_g4.fcl  genie_dunend.fcl  prodgenie_nu_dunendlartms.fcl  setup_dunend.sh  webevdjob_dunendlartms.fcl
ups/: product_deps
